Added up to chapter 18 to course notes.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 
 	<head>
 	    <meta charset="UTF-8">
-	    <title>Document</title>
+	    <title>Standard Greeting</title>
+		<link rel="stylesheet" href="css/c01.css"/>
 	</head>
 	<body>
-	    <p>This is our test document.</p>
-	</body>
+		<a>
+	    <div>Div 1</div>
+	    <div>Div 2</div>
+	    <div>Div 3</div>
+	    <div>Div 4</div>
+	    <div>Div 5</div>
+	    <div>Div 6</div>
+	  </a>
+</body>
 </html>
